* Update bugreport URL.
* Update -I documentation.
* [Bug 713] Fix bug reporting information.
* A bug in the application of the negative-sawtooth for 12 channel receivers. 
* The removal of unneeded startup code used for the original LinuxPPS, it now
  conforms to the PPSAPI and does not need special code.  
* ntp-keygen.c: Coverity fixes [CID 33,47].
* Volley cleanup from Dave Mills.
* Fuzz cleanup from Dave Mills.
* [Bug 861] Leap second cleanups from Dave Mills.
* ntpsim.c: add missing protypes and fix [CID 34], a nit.
* Upgraded bison at UDel.
* Update br-flock and flock-build machine lists.
* [Bug 752] QoS: add parse/config handling code. 
* Fix the #include order in tickadj.c for picky machines.
* [Bug 752] QoS: On some systems, netinet/ip.h needs netinet/ip_systm.h.
* [Bug 752] Update the QoS tagging (code only - configuration to follow).
* Orphan mode and other protocol cleanup from Dave Mills.
* Documentation cleanup from Dave Mills.
* [Bug 940] ntp-keygen uses -v.  Disallow it as a shortcut for --version.
* more cleanup to ntp_lineeditlibs.m4.
* Documentation updates from Dave Mills.
* -ledit cleanup for ntpdc and ntpq.
* Association and other cleanup from Dave Mills.
* NTP_UNREACH changes from Dave Mills.
* Fix the readline history test.
* [Bug 931] Require -lreadline to be asked for explicitly.
* [Bug 764] When looking for -lreadline support, also try using -lncurses.
* [Bug 909] Fix int32_t errors for ntohl().
* [Bug 376/214] Enhancements to support multiple if names and IP addresses.
* [Bug 929] int32_t is undefined on Windows.  Casting wrong.
* [Bug 928] readlink missing braces.
* [Bug 788] Update macros to support VS 2005.
* ntpd/ntp_timer.c: add missing sys_tai parameter for debug printf
* [Bug 917] config parse leaves files open
* [Bug 912] detect conflicting enable/disable configuration on interfaces
  sharing an IP address
* [Bug 771] compare scopeid if available for IPv6 addresses
* Lose obsolete crypto subcommands (Dave Mills).